# tictactrip-data

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
tests/: test_loader.py  test_quality.py  test_stats.py
tictactrip/: __init__.py  loader.py  maps.py  model.py  plots.py  quality.py  stats.py
