[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "tictactrip-analysis"
version     = "1.0.0"
description = "Data analysis of Tictactrip transport tickets"
authors     = [{name = "Ben Hamida Chayma"}]
readme      = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "haversine>=2.8",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "folium>=0.15",
    "networkx>=3.2",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbformat>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
